# PhilippineHolidayAPI

./: .gitignore  Audit.toml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  render.yaml
.cargo/: audit.toml  clippy.toml  config.toml  rustfmt.toml
.github/: CONTRIBUTING.md
.github/workflows/: deps-check.yml  release.yml
snapshots/: holidays_2025.html
src/: hscraper.rs  main.rs  server.rs
